fix: Line breaks in description

--- a/src/FSD/pages/album/ui/AlbumPage.module.scss
+++ b/src/FSD/pages/album/ui/AlbumPage.module.scss
@@ -22,4 +22,5 @@
     margin: var(--fontSizeLargest) 15% var(--fontSizeLargest) 15%;
     color: var(--fontColorFirm);
     font-size: var(--fontSizeMedium);
+    white-space: pre-wrap;
 }
